# Language-benchmarks

./: .gitignore  README.md
C/: README.md  factors.c  fibonacci.c  primes.c
Container-lang/: README.md  factors.cnl  primes.cnl
Crystal/: README.md  factors.cr  fibonacci.cr  primes.cr
Go/: README.md  factors.go
Go/Factors/: factors.go
Go/Fibonacci/: fibonacci.go
Go/Primes/: primes.go
Java/: README.md  factors.java  fibonnaci.java  primes.java
Javascript/: README.md  factors.js  fibonacci.js  index.html  primes.js
Lua/: README.md  factors.lua  fibonacci.lua  primes.lua
Nim/: README.md  factors.nim  fibonacci.nim  primes.nim
Php/: README.md  factors.php  fibonacci.php  primes.php
Python/: README.md  factors.py  fibonacci.py  primes.py
Rust/: Cargo.toml  README.md
Rust/src/: factors.rs  fibonacci.rs  primes.rs
V/: README.md  factors.v  fibonacci.v  primes.v
